--- a/into.html
+++ b/into.html
@@ -6,7 +6,7 @@
     <title>Exam 1</title>
 </head>
 <body>
-    <h1>Exam 1 for noobs
+    <h1>Exam 1 for noobwws
         sduwidsja sdddwi
         dwodaodskaodss
     </h1>
